@@ -86,6 +86,7 @@ public class HelloController {
     private boolean isRunning = false;
     private int resetCounter;
     private Playlist currentPlaylist;
+    private Song currentSong;
 
     /**
      * Initializes different aspects of the program, including: Pictures, songs from database, searchbar, buttons
@@ -159,8 +160,8 @@ public class HelloController {
 
         if (currentPlaylist.getSongs().get(currentSongNumber) != null)
         {
-            createMediaPlayer(allSongs.get(0));
-
+            createMediaPlayer(allSongs.getFirst());
+            currentSong = allSongs.getFirst();
         }
         SongTitleLabel.setText("Welcome To Kittyfy");
         ArtistNameLabel.setText("playing playlist: "+ currentPlaylist.getName());
@@ -239,19 +240,18 @@ public class HelloController {
                 SongTitleLabel.setText(song.getTitle());
             });
 
-            //starts the song, and changes the icon.
-            isRunning = true;
-
             if (fromPlaylist)
             {
                 currentSongNumber = currentPlaylist.getSongIndex(song);
             }
 
+            currentSong = song;
 
             if (timer == null){beginTimer();}
             else {cancelTimer();}
 
             mediaPlayer.play();
+            isRunning = true;
 
             checkIcon();
             displayArtistBasedOnSong(song);
@@ -272,11 +272,11 @@ public class HelloController {
     private void checkIcon() {
         if (isRunning)
         {
-            playButton.setText("😿");
+            playButton.setText("😹");
         }
         else
         {
-            playButton.setText("😹");
+            playButton.setText("😿");
         }
     }
 
@@ -287,7 +287,19 @@ public class HelloController {
      * @throws IOException
      */
     public void playMusic() throws Exception {
-       playSong(currentPlaylist.getSongs().get(currentSongNumber), false);
+
+       if (isRunning){
+           isRunning = false;
+           checkIcon();
+           mediaPlayer.pause();
+       }
+       else {
+           isRunning = true;
+           checkIcon();
+           mediaPlayer.play();
+           displayArtistBasedOnSong(currentSong);
+           displaySongTitleOnLabel(currentSong);
+       }
     }
 
     public void addSongClick() {
